[package]
name = "murasaki"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.4.0", features = ["std"] }
env_logger = "0.10.0"
nostr-sdk = { git = "https://github.com/rust-nostr/nostr.git" }
reqwest = { version = "0.11", features = ["json"] }
rodio = "0.17.1"
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
toml = "0.7.2"
serde = "1.0.155"
anyhow = "1.0.69"
linkify = "0.9.0"
clap = { version = "4.1.8", features = ["derive"] }
